# StokesianFlow

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  main.cpp
Eigen_Test/: main.cpp
Results/: README.md  meshPoints.csv  plot.py
include/: femSolver.hpp  vector.hpp
src/: CMakeLists.txt  femSolver.cpp  main.cpp  vector.cpp
